# pyprj

./: .creat.json  .editorconfig  .gitignore  Makefile  Makefile.jinja  README.md  README.md.jinja  copier.yaml  pyproject.toml  pyproject.toml.jinja
project_name/: __init__.py  __main__.py
tests/: test_main.py.jinja
{{project}}/: __init__.py.jinja  __main__.py
