[tool.poetry]
name = "project-name"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"] 
readme = "README.md"
packages = [
    { include = "project_name" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
