[tool.poetry]
name = "project-name"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"] 
readme = "README.md"
packages = [
    { include = "project_name" }
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
loguru = "^0.7.2"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
